2009-02-12  John W. Eaton  <jwe@octave.org>

	* general/sortrows.m: Call __sort_rows_idx__, not __sortrows_idx__.

2009-02-12  Soren Hauberg  <hauberg@gmail.com>

	* help/gen_doc_cache.m: Change API so we only handle one directory per
        call to this function.

2009-02-12  Soren Hauberg  <hauberg@gmail.com>

	* help/lookfor.m: Adapt to new cache scheme.

2009-02-11  Jaroslav Hajek  <highegg@gmail.com>

	* general/sortrows.m: Employ __sortrows_idx__ when applicable,
	gripe for sparse matrices.

2009-02-11  John W. Eaton  <jwe@octave.org>

	* miscellaneous/news.m: Look in octetcdir for NEWS file.

2009-02-09  Jaroslav Hajek  <highegg@gmail.com>

	* general/interp2.m: Added support for pchip bicubic interpolation.
	Also simplified code and added support for natural extrapolation via
	"extrap".

2009-02-09  John W. Eaton  <jwe@octave.org>

	* miscellaneous/Makefile.in (SOURCES): Include __xzip__.m in the list.

	* testfun/rundemos.m: Error if fopen fails.

2009-02-08  John W. Eaton  <jwe@octave.org>

	* Makefile.in (install install-strip): Don't install ls-R file.
	(uninstall): Don't uninstall ls-R file.

2009-02-06  Jaroslav Hajek  <highegg@gmail.com>

	* optimization/fsolve.m: Document support for complex holomorphic
	systems. Improve guarded evaluation.

2009-02-05  John W. Eaton  <jwe@octave.org>

	* miscellaneous/news.m: Use puts instead of printf.

2009-02-05  Thomas D. Dean  <tomdean@speakeasy.org>

	* polynomial/polyout.m: Replace com2str with num2str, and minor
	style changes.

2009-02-04  John W. Eaton  <jwe@octave.org>

	* help/which.m: Still print something sensible if type is empty.

2009-02-04  Soren Hauberg  <hauberg@gmail.com>
            Thomas Treichl  <Thomas.Treichl@gmx.net>

	* miscellaneous/Makefile.in (SOURCES): Add bzip2.m to the list.

2009-02-04  Frederick Umminger  <Frederick_Umminger@playstation.sony.com>

	* signal/freqz.m: Ensure causal phase response.
	Handle long input correctly.

2009-02-04  Petr Mikulik  <mikulik@physics.muni.cz>
